--- a/.github/workflows/data-worker.yml
+++ b/.github/workflows/data-worker.yml
@@ -22,8 +22,15 @@ jobs:
     steps:
       - uses: actions/checkout@v3
 
-      - name: Build image
-        run: docker build . --tag xximjasonxx/data-worker:v${GITHUB_RUN_NUMBER}
+      - name: Login to DockerHub
+        uses: docker/login-action@v1
+        with:
+          username: ${{ secrets.DOCKER_USERNAME }}
+          password: ${{ secrets.DOCKER_PASSWORD }}
 
-      - name: Push image
-        run: docker push xximjasonxx/data-worker:v${GITHUB_RUN_NUMBER}
+      - name: Build and push
+        uses: docker/build-push-action@v2
+        with:
+          context: .
+          push: true
+          tags: xximjasonxx/data-worker:$GITHUB_RUN_ID
