--- a/.github/workflows/data-worker.yml
+++ b/.github/workflows/data-worker.yml
@@ -26,7 +26,7 @@ jobs:
         uses: docker/login-action@v1
         with:
           username: ${{ secrets.DOCKER_HUB_USERNAME }}
-          password: ${{ secrets.DOCKER_HUB_PASSWORD }}
+          password: ${{ secrets.DOCKER_HUB_PAT }}
 
       - name: Build and push
         uses: docker/build-push-action@v2
