--- a/.github/workflows/data-worker.yml
+++ b/.github/workflows/data-worker.yml
@@ -33,4 +33,4 @@ jobs:
         with:
           context: .
           push: true
-          tags: xximjasonxx/data-worker:${{ GITHUB_RUN_NUMBER }}
+          tags: xximjasonxx/data-worker:$GITHUB_RUN_NUMBER
