--- a/.github/workflows/data-worker.yml
+++ b/.github/workflows/data-worker.yml
@@ -29,4 +29,4 @@ jobs:
         with:
           context: StockDataWorker/
           push: true
-          tags: xximjasonxx/data-worker:${{ github.run_number }}
+          tags: xximjasonxx/data-worker:v${{ github.run_number }}
