--- a/StockDataWorker/helm/templates/job.yaml
+++ b/StockDataWorker/helm/templates/job.yaml
@@ -1,7 +1,7 @@
 apiVersion: batch/v1
 kind: Job
 metadata:
-  name: data-worker-job
+  name: data-worker-job-{{ .Chart.AppVersion }}-{{ .Values.image.tag }}
 
 spec:
   template:
