--- a/StockPriceChangeConsumer/appsettings.json
+++ b/StockPriceChangeConsumer/appsettings.json
@@ -1,5 +1,6 @@
 {
     "CosmosEndpointUri": "https://cosmos-stockdata.documents.azure.com:443/",
     "CosmosDatabaseName": "stock-data",
-    "CosmosContainerName": "stock-prices"
+    "CosmosContainerName": "stock-prices",
+    "KafkaHost": "localhost:9092"
 }
