started to add helm and picker

--- a/StockPicker/appsettings.json
+++ b/StockPicker/appsettings.json
@@ -6,5 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "RedisServerHostname": "localhost"
+  "RedisServerHostname": "localhost",
+  "StockDataApiUrl": "http://localhost:8080"
 }
