--- a/StockPicker/appsettings.json
+++ b/StockPicker/appsettings.json
@@ -7,5 +7,6 @@
   },
   "AllowedHosts": "*",
   "RedisServerHostname": "localhost",
+  "RedisPassword": "",
   "StockDataApiUrl": "http://localhost:8080"
 }
