--- a/stockapp/Chart.yaml
+++ b/stockapp/Chart.yaml
@@ -6,3 +6,8 @@ type: application
 version: 1.0.0
 
 appVersion: "1.0.0"
+dependencies:
+  - name: redis
+    repository: https://charts.bitnami.com/bitnami/redis
+    version: 16.12.2
+    alias: picker-redis
