--- a/stockapp/Chart.yaml
+++ b/stockapp/Chart.yaml
@@ -11,3 +11,6 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami/redis
     version: 16.12.2
     alias: picker-redis
+  - name: kafka
+    repository: https://charts.bitnami.com/bitnami/kafka
+    version: 17.2.6
