added helm chart updates for updater

--- a/StockPriceUpdater/appsettings.json
+++ b/StockPriceUpdater/appsettings.json
@@ -1,5 +1,7 @@
 {
   "KafkaHost": "localhost:9092",
   "KafkaTopic": "stock-price-updates",
-  "ConsumerGroup": "price-updates-consumer-group"
+  "ConsumerGroup": "price-updates-consumer-group",
+  "RedisServerHostname": "localhost",
+  "RedisPassword": ""
 }
