--- a/stockapp/Chart.yaml
+++ b/stockapp/Chart.yaml
@@ -11,3 +11,7 @@ dependencies:
     repository: https://charts.bitnami.com/bitnami/redis
     version: 16.12.2
     alias: picker-redis
+  - name: redis
+    repository: https://charts.bitnami.com/bitnami/redis
+    version: 16.12.2
+    alias: price-data-redis
