--- a/stockapp/templates/picker-web.yaml
+++ b/stockapp/templates/picker-web.yaml
@@ -22,14 +22,20 @@ spec:
           imagePullPolicy: Always
           env:
             - name: RedisServerHostname
-              value: {{ .Release.Name }}-picker-redis-master.{{ .Release.Namespace }}.svc.cluster.local
+              valueFrom:
+                configMapKeyRef:
+                  name: stockapp-config
+                  key: pickerRedisHost
             - name: RedisPassword
               valueFrom:
                 secretKeyRef:
                   name: {{ .Release.Name }}-picker-redis
                   key: redis-password
             - name: StockDataApiUrl
-              value: http://stock-data-api-service.{{ .Release.Namespace }}.svc.cluster.local
+              valueFrom:
+                configMapKeyRef:
+                  name: stockapp-config
+                  key: dataApiUrl
           ports:
             - containerPort: 80
           resources:
