visual update for pick create

--- a/StockPriceUpdater/appsettings.json
+++ b/StockPriceUpdater/appsettings.json
@@ -1,6 +1,7 @@
 {
   "KafkaHost": "localhost:9092",
   "KafkaTopic": "stock-price-updates",
+  "PriceChangeTopic": "stock-price-percent-change",
   "ConsumerGroup": "price-updates-consumer-group",
   "RedisServerHostname": "localhost",
   "RedisPassword": ""
