added changes to support notification persistance

--- a/StockPicker/appsettings.json
+++ b/StockPicker/appsettings.json
@@ -7,6 +7,6 @@
   },
   "AllowedHosts": "*",
   "RedisServerHostname": "localhost",
-  "RedisPassword": "",
+  "RedisPassword": "yBXqiW71U6",
   "StockDataApiUrl": "http://localhost:8080"
 }
