added ingress spec

--- a/StockPriceChangeNotifier/appsettings.json
+++ b/StockPriceChangeNotifier/appsettings.json
@@ -1,5 +1,5 @@
 {
-  "KafkaHost": "localhost:9092",
+  "KafkaHost": "localhost",
   "KafkaTopic": "stock-price-percent-change",
   "ConsumerGroup": "price-change-consumer-group",
   "RedisServerHostname": "localhost",
